--- a/LatticeMaker Web/Local/index.html
+++ b/LatticeMaker Web/Local/index.html
@@ -105,6 +105,7 @@ pri_inf(X,Y,bottom).</textarea>
 					</div></div>
 				</div>
 				<div id="lattices-control">
+                    <input type="button" class="button-lattice" value="Save" onclick=save_lattice("textarea-lattice")>
                     <input type="button" class="button-lattice" value="Normalize" onclick=normalize_from_text("textarea-lattice")>
  					<input type="button" class="button-lattice" value="Add member" onclick=addMember("textarea-lattice")>
 					<input type="button" class="button-lattice" value="Remove member" onclick=removeMember("canvas-lattice","textarea-lattice")>
