Drag and drop for load files working

--- a/LatticeMaker Web/Local/index.html
+++ b/LatticeMaker Web/Local/index.html
@@ -116,7 +116,8 @@ pri_inf(X,Y,bottom).</textarea>
 				<h2>Export lattice</h2>
 			</div>
 		</div>
-		<script type="text/javascript">latticeMaker( "textarea-lattice","canvas-lattice" );</script>
+		<script type="text/javascript">latticeMaker( "textarea-lattice","canvas-lattice" ); load_lattice("textarea-lattice");
+            </script>
 </div>
 
 		<!-- FOOTER -->
