--- a/LatticeMaker Web/Local/index.html
+++ b/LatticeMaker Web/Local/index.html
@@ -109,11 +109,11 @@ pri_inf(X,Y,bottom).</textarea>
                     <div class = "file-controls">
                         File:
                         <input type = "text" id = "lattice-name" class = "file-name" value = "alfabeta.lat">
-                        <input type = "file" id="latfile">
+                        <input type = "file" id="latfile" onchange = upload_lattice_button("textarea-lattice","lattice-name","latfile")>
                         <button type = "button" class = "button-lattice" title = "Upload lattice" onclick = "latfile.click()"><img src = "./media/upload.png"></button>
-                        
                         <button type = "button" class = "button-lattice" title = "Download lattice" onclick = save_lattice("textarea-lattice","lattice-name")> <img src = "media/download.png"> </button>
                     </div>
+                    
                     <div class = "lattice-controls">
                         <button type = "button" class = "button-lattice" title = "Normalize" onclick = normalize_from_text("textarea-lattice")> <img src = "media/normalize.png"> </button>
                         <button type = "button" class = "button-lattice" title = "Add new member" onclick = addMember("textarea-lattice")> <img src = "media/add_member.png"> </button>
@@ -133,7 +133,7 @@ pri_inf(X,Y,bottom).</textarea>
                 </div>
 			</div>
 		</div>
-		<script type="text/javascript">latticeMaker( "textarea-lattice","canvas-lattice" ); load_lattice("textarea-lattice","lattice-name");
+		<script type="text/javascript">latticeMaker( "textarea-lattice","canvas-lattice" ); upload_lattice_drop("textarea-lattice","lattice-name");
             </script>
 </div>
 
