--- a/LatticeMaker Web/Local/index.html
+++ b/LatticeMaker Web/Local/index.html
@@ -126,21 +126,24 @@ pri_inf(X,Y,bottom).</textarea>
 				<h2>Properties</h2>
 				<div id = "properties-form">
                     <form id = "properties-form">
-                        Property: 
-                        <select class="lattice-selection"> 
-                            <option>No Selection</option>
-                            <option>Frontier top</option>
-                            <option>Frontier bot</option>
+                        Category:
+                        <select id = "category-combo" class="lattice-selection"> 
+                            <option>Basic</option>
+                            <option>Combined</option>
+                            <option>Multiple</option>
                         </select>
-                        Aggregator 1: <select id = "aggr_combo1" class="lattice-selection"> </select>
-                        Aggregator 2: <select id = "aggr_combo2" class="lattice-selection"> </select>
+                        Property: 
+                        <select id = "property-combo" class="lattice-selection"> 
+                        </select>
+                        Connective 1: <select id = "aggr_combo1" class="lattice-selection"> </select>
+                        Connective 2: <select id = "aggr_combo2" disabled = true class="lattice-selection"> </select>
                         <input type = "submit">
                         <h3>Result</h3><textarea id="property-result" class="code-try" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" style="height: 200px;"> </textarea>
                     </form>
                 </div>
 			</div>
 		</div>
-		<script type="text/javascript">latticeMaker( "textarea-lattice","canvas-lattice" ); getAggrFromTextArea("textarea-lattice","aggr_combo1","aggr_combo2"); upload_lattice_drop("textarea-lattice","lattice-name"); 
+		<script type="text/javascript">latticeMaker( "textarea-lattice","canvas-lattice" ); properties_tester("textarea-lattice","category-combo","property-combo","aggr_combo1","aggr_combo2"); upload_lattice_drop("textarea-lattice","lattice-name"); 
             </script>
 </div>
 
