--- a/LatticeMaker Web/Local/index.html
+++ b/LatticeMaker Web/Local/index.html
@@ -147,7 +147,7 @@ pri_inf(X,Y,bottom).</textarea>
                 </div>
 			</div>
 		</div>
-		<script type="text/javascript">latticeMaker( "textarea-lattice","canvas-lattice" ); properties_tester("textarea-lattice","category-combo","property-combo","aggr_combo1","aggr_combo2"); upload_lattice_drop("textarea-lattice","lattice-name"); 
+		<script type="text/javascript">latticeMaker( "textarea-lattice","canvas-lattice" ); properties_tester("textarea-lattice","category-combo","property-combo","aggr_combo1","aggr_combo2","math-definition"); upload_lattice_drop("textarea-lattice","lattice-name"); 
             </script>
 </div>
 
