--- a/LatticeMaker Web/Local/index.html
+++ b/LatticeMaker Web/Local/index.html
@@ -141,8 +141,15 @@ pri_inf(X,Y,bottom).</textarea>
                         <label for="aggr-combo2">Connective 2:</label>
                         <select id = "aggr_combo2" disabled = true class="lattice-selection"> </select>
                         <br><br>
-                        <label for  = "math-definition">Mathematical definition:</label>
-                        <textarea class = "math-displayer" id = "math-definition" readonly  = "readonly" ></textarea>
+                        <div class = "twocols">
+                            <div style="width:80%">
+                                <label for  = "math-definition">Mathematical definition:</label>
+                                <textarea class = "math-displayer" id = "math-definition" readonly  = "readonly" ></textarea>
+                            </div>
+                            <div style="width:20%">
+                                <input type="submit" id = "test-submit" class = "button-lattice" value = "Test" style = "width:150px;height:50px;margin-top:25px;">
+                            </div>
+                        </div>
                         <h3>Result</h3><textarea id="property-result" class="code-try" readonly = "readonly" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" style="height: 200px;"> </textarea>
                     </form>
                 </div>
